# esp32-testing

./: Cargo.toml  diagram.json  wokwi-project.txt  wokwi.toml
src/: lcd.rs  main.rs
