[package]
name = "i2c-test"
version = "1.0.0"
authors = ["Tanguy"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
anyhow = "1.0.71"

[build-dependencies]
embuild = "0.31.1"
